// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders correctly 1`] = `
<div
  className="container"
>
  <Header />
  <main
    className="content"
  >
    <Switch />
  </main>
  <Sidebar />
  <Connect(Footer) />
  <Connect(Player) />
</div>
`;

exports[`<App /> renders plainpost correctly 1`] = `
<div
  className="container"
>
  <main
    className="content"
  >
    <Switch />
  </main>
</div>
`;
